syntax = "proto3";

package adam.hello;

option go_package = "adam/hello";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

